[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "RESET"

[sub_resource type="Animation" id=2]
resource_name = "Step"
length = 0.5
step = 0.05

[node name="Player" type="Spatial" groups=["player"]]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="TweenViewport" type="Tween" parent="."]

[node name="RayForward" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 36
collide_with_areas = true
collide_with_bodies = false

[node name="RayBack" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 2 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayRight" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayLeft" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( -2, 0, 0 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayDown" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, -2, 0 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Step = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05
autostart = true

[node name="Camera" type="Camera" parent="." groups=["player_cam"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="RayCamera" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 2048
collide_with_areas = true
collide_with_bodies = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
